# medservice-backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  AUDIT.md  BACKEND_DOC.md  Caddyfile  DEPLOY.md  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_rating_int_2_5.py  0003_add_parsing_fields.py  0004_rating_range_1_5.py  0005_admin_fields.py  0006_add_sms_settings.py  0006_bonuses.py  0007_add_bonus_catalog.py  0007_promo_and_faq.py  0008_add_review_verification.py  0008_request_public_token.py  0009_add_request_rating.py  0010_add_user_branches.py  0011_add_branch_logo.py  55b9ff315408_add_settings_models.py  (+1 more)
app/: config.py  main.py
scripts/: .env.example  README.md  _common.ps1  create_admin.py  parse-status.bat  parse-status.ps1  parse.bat  parse.ps1  sms-status.sh  start-sms-tunnel.sh  verify_reviews.py
tests/: conftest.py  test_admin_bonuses.py  test_admin_faq.py  test_admin_impersonate.py  test_analytics_api.py  test_auth_api.py  test_blacklist_api.py  test_blacklist_blocks_request.py  test_bonuses_branding.py  test_branch_bonuses.py  test_branch_isolation.py  test_branches_api.py  test_complaints_api.py  test_config_guard.py  test_config_security.py  test_employees_api.py  test_public_branch_complaint.py  test_public_mini.py  test_public_request_tracking.py  test_public_review_flow.py  test_requests_api.py  test_reviews_api.py  test_role_separation.py  test_ssrf_url_guard.py
(+53 files in other folders)
